
Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.3.8

Breaking Changes:
- Line Series:    Removed "fill" keyword (use the new shade series)
- Plots:          Removed all flags in favor of keywords
- Pie Chart:      Removed "add_pie_chart"
- Pie Chart:      Removed "add_pie_chart_data"
- Pie Chart:      Removed "clear_pie_chart_data"

New Commands:
- Widgets:        Added "configure_item" command
- Widgets:        Added "get_item_configuration" command
- Widgets:        Added "add_pie_series" command
- Plots:          Added "add_shade_series" command
- Plots:          Added "add_bar_series" command
- Plots:          Added "add_error_series" command
- Plots:          Added "add_heat_series" command
- Radio Button:   Added "horizontal" keyword to radio button #215
- Radio Button:   Added "update_bounds" keyword to add_*_series commands

-----------------------------------------------------------------------
 VERSION 0.3.7 (9/14/2020)
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.3.7

Updates:
- ImPlot: upgraded to commit 4f0a09f

New Commands:
- Widgets: Added "add_image_button" command
- Plots:   Added "add_pie_chart" command
- Plots:   Added "add_pie_chart_data" command
- Plots:   Added "clear_pie_chart_data" command
- Plots:   Added "add_stem_series" command

Fixes:
- Threadpool: Fixed issue with threads freezing


-----------------------------------------------------------------------
 VERSION 0.3.5 (9/10/2020)
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.3.5

New Commands:
- Menu Item: added "check" and "shortcut" keywords #186
- Widgets:   added "is_item_container" #203
- Widgets:   added "get_item_parent" #203
- Widgets:   added "is_item_shown" #203

Fixes:
- Other: Fixed get_window_pos for built-in windows #202