@@ -86,7 +86,7 @@ namespace Marvel {
 
 		m_mainThreadID = std::this_thread::get_id();
 
-		m_windows.push_back(new mvWindowAppitem("MainWindow", 1280, 800, 0, 0, true, false, true, false, false));
+		m_windows.push_back(new mvWindowAppitem("MainWindow", 1280, 800, 0, 0, true, 0, false));
 		m_parents.push(m_windows.back());
 
 		addStandardWindow("documentation##standard", mvDocWindow::GetWindow());
